--- a/3DMap/index.html
+++ b/3DMap/index.html
@@ -7,22 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Turf</title>
+    <title></title>
     <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
+    <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
     <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
-    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 </head>
 <body>
-    <div id="cesiumContainer" class="fullSize"></div>
-    <div id="toolbar"></div>
-
-    <script src="Sandcastle.js"></script>
-    <script src="PolylinePrimitive.js"></script>
-    <script src="PolygonPrimitive.js"></script>
-    <script src="MouseHandler.js"></script>
-    <script src="PolygonDrawing.js"></script>
-    <script src="GridPointPrimitiveCollectionRequest.js"></script>
-    <script src="app.js"></script>
+<div id="cesiumContainer" class="fullSize"></div>
+<div id="toolbar"></div>
+<script src="app.js"></script>
 </body>
 </html>
