--- a/Clipped3DMap/index.html
+++ b/Clipped3DMap/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>3DMap</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
+    <title>Clipped 3DMap</title>
+    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.77/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
     <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
-    <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
+    <script src="https://cesiumjs.org/releases/1.77/Build/Cesium/Cesium.js"></script>
 </head>
 <body>
 <div id="cesiumContainer" class="fullSize"></div>
