--- a/UndergroundDrillHole/index.html
+++ b/UndergroundDrillHole/index.html
@@ -8,7 +8,7 @@
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>Underground</title>
+    <title>Underground Drill Hole</title>
     <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
     <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
