- add CesiumIonAPI sample - update NewYork3DTileset sample   Cesium3DTilesetStyle

--- a/NewYork3DTileset/index.html
+++ b/NewYork3DTileset/index.html
@@ -40,6 +40,14 @@
                 tileset.boundingSphere.radius / 4.0
             )
         );
+
+        var transparentStyle = new Cesium.Cesium3DTileStyle({
+            color : "color('white', 0.3)",
+            show : true
+        });
+
+        tileset.style = transparentStyle;
+
     }).otherwise(function(err) {
         console.error(err.message);
     });
