--- a/CameraTest/index.html
+++ b/CameraTest/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="https://cesiumjs.org/releases/1.73/Build/Cesium/Widgets/widgets.css">
   <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-  <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
+  <script src="https://cesiumjs.org/releases/1.78/Build/Cesium/Cesium.js"></script>
   <script src="jquery-2.1.4.min.js"></script>
   <script src="range.js"></script>
 
@@ -66,13 +66,14 @@
   </div>
 
   <script>
+    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJlYTIzNzQ4NS1iN2ZmLTQ3ZWQtYjU0OS1mZWI4Nzk0MjcwNDAiLCJpZCI6OTc4Niwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTU1NDkxODE3NH0.UUQf2vuc3PN3VPNSUYt5uAbrSv5irvkIe-A57Ocp6ow";
     var viewer = new Cesium.Viewer('cesiumContainer');
 
     viewer.terrainProvider = Cesium.createWorldTerrain();
     viewer.extend(Cesium.viewerCesiumInspectorMixin);
 
     var tileset = new Cesium.Cesium3DTileset({
-      url: Cesium.IonResource.fromAssetId(6074)
+      url: Cesium.IonResource.fromAssetId(75343)
     });
 
     viewer.scene.primitives.add(tileset);
@@ -104,6 +105,10 @@
       var heading = Number($("#heading").val());
       var pitch = Number($("#pitch").val());
       var roll = Number($("#roll").val());
+
+      console.log('heading', heading);
+      console.log('pitch', pitch);
+      console.log('roll', roll);
 
       viewer.camera.setView({
         orientation: {
