--- a/DrawAxis/index.html
+++ b/DrawAxis/index.html
@@ -13,10 +13,11 @@
 <div id = "cesiumContainer"> </div>
 <div id="loadingOverlay"><h1>Loading...</h1></div>
 <script type="text/javascript">
+    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJlYTIzNzQ4NS1iN2ZmLTQ3ZWQtYjU0OS1mZWI4Nzk0MjcwNDAiLCJpZCI6OTc4Niwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTU1NDkxODE3NH0.UUQf2vuc3PN3VPNSUYt5uAbrSv5irvkIe-A57Ocp6ow";
+
     viewer = new Cesium.Viewer('cesiumContainer', {
         selectionIndicator: false
     });
-
 
     let xAxis = viewer.entities.add({
         name : 'X axis',
