- fix error in 3-Playground sample - update Cesium version in CircleWaveMaterial sample

--- a/3-Playground/index.html
+++ b/3-Playground/index.html
@@ -8,9 +8,10 @@
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>CesiumJs Playground</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
+    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.78/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-    <script src="https://cesiumjs.org/releases/1.77/Build/Cesium/Cesium.js"></script>
+    <script src="https://cesiumjs.org/releases/1.78/Build/Cesium/Cesium.js"></script>
+    <script src="https://cesiumjs.org/releases/1.78/Build/CesiumUnminified/Cesium.js"></script>
     <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
 
     <style>
