--- a/GeoJsonPolygon/index.html
+++ b/GeoJsonPolygon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>GeoJson Polygon</title>
 
     <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
@@ -13,6 +13,8 @@
 <div id = "cesiumContainer" class="fullSize"> </div>
 <div id="loadingOverlay"><h1>Loading...</h1></div>
 <script type="text/javascript">
+    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJlYTIzNzQ4NS1iN2ZmLTQ3ZWQtYjU0OS1mZWI4Nzk0MjcwNDAiLCJpZCI6OTc4Niwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTU1NDkxODE3NH0.UUQf2vuc3PN3VPNSUYt5uAbrSv5irvkIe-A57Ocp6ow";
+
     var viewer = new Cesium.Viewer('cesiumContainer');
     
     var dataSource = Cesium.GeoJsonDataSource.load('./russia.json');
