--- a/Terrain/GetHeight/index.html
+++ b/Terrain/GetHeight/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>CesiumJs Hello World</title>
+    <title>Get Terrain Height</title>
     <link rel="stylesheet" href="https://cesiumjs.org/releases/1.80/Build/Cesium/Widgets/widgets.css">
     <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
     <script src="https://cesiumjs.org/releases/1.80/Build/Cesium/Cesium.js"></script>
@@ -19,9 +19,32 @@
 </div>
 
 <script>
-    //Cesium.Ion.defaultAccessToken = "your access token";
+    // Cesium.Ion.defaultAccessToken = "your access token";
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {});
+    var viewer = new Cesium.Viewer("cesiumContainer", {
+        terrainProvider: Cesium.createWorldTerrain()
+    });
+
+    // everest
+    var longitude = 86.9250;
+    var latitude = 27.9881;
+    var height = 8848;
+
+    viewer.camera.flyTo({
+        destination : Cesium.Cartesian3.fromDegrees(longitude, latitude, height + 2000),
+        orientation : {
+            heading : Cesium.Math.toRadians(0),
+            pitch : Cesium.Math.toRadians(-35.0),
+            roll : 0.0
+        },
+        complete: () => {
+            setTimeout(() => {
+                const height = viewer.scene.globe.getHeight(Cesium.Cartographic.fromDegrees(longitude, latitude));
+
+                console.log(height);
+            }, 2000);
+        }
+    });
 </script>
 </body>
 </html>
