--- a/Mixins/LatlonInspectorMixin/index.html
+++ b/Mixins/LatlonInspectorMixin/index.html
@@ -12,7 +12,7 @@
     />
     <title>LatlonInspector</title>
     <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
-    <link rel="stylesheet" href="./viewerLatlonInspectorMixin.css">
+    <link rel="stylesheet" href="viewerLatlonInspectorMixin.css">
     <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
 
     <style>
@@ -30,7 +30,7 @@
   <body>
     <div id="cesiumContainer"></div>
 
-    <script src="./viewerLatlonInspectorMixin.js"></script>
+    <script src="viewerLatlonInspectorMixin.js"></script>
 
     <script>
       var viewer = new Cesium.Viewer("cesiumContainer");
