--- a/EntityPrimitiveAPI/Model/index.html
+++ b/EntityPrimitiveAPI/Model/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Model</title>
 
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.83/Build/CesiumUnminified/Cesium.js"></script>
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.83/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/CesiumUnminified/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
 <div id = "cesiumContainer" class="fullSize"> </div>
@@ -80,7 +80,7 @@
         }
     });
 
-    // when heading is 0, arrow b will align with eath
+    // when heading is 0, arrow b will align with earth
 
     const arrowB = viewer.entities.add({
         position: position,
