--- a/ImageryLayer/WMS/index.html
+++ b/ImageryLayer/WMS/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>GeoServer WMS</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.80/Build/Cesium/Widgets/widgets.css">
-    <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-    <script src="https://cesiumjs.org/releases/1.80/Build/Cesium/Cesium.js"></script>
-    <script src="https://sandcastle.cesium.com/Sandcastle-header.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../0-Common/bucket.css">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/CesiumUnminified/Cesium.js"></script>
+    <script src="../../0-Common/Sandcastle-header.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.6.5/ol-debug.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
