--- a/Cesium3DTile/Clipping/modelMatrix.html
+++ b/Cesium3DTile/Clipping/modelMatrix.html
@@ -9,8 +9,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>ModelMatrix</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.87/Build/CesiumUnminified/Cesium.js"></script>
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.87/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/CesiumUnminified/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <link href="../../0-Common/bucket.css" rel="stylesheet">
     <script src="../../0-Common/Sandcastle-header.js"></script>
 </head>
@@ -215,7 +215,7 @@
                 if(cb)
                     cb(tileset);
             })
-            .otherwise(function (error) {
+            .catch(function (error) {
                 console.log(error);
             });
     }
