--- a/Cesium3DTile/Clipping/renderClippingPlane.html
+++ b/Cesium3DTile/Clipping/renderClippingPlane.html
@@ -9,8 +9,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>Render Clipping Plane</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/CesiumUnminified/Cesium.js"></script>
-    <link href="https://cesium.com/downloads/cesiumjs/releases/1.86.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/CesiumUnminified/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="https://sandcastle.cesium.com/Sandcastle-header.js"></script>
 </head>
 <body>
