--- a/Cesium3DTile/NewYork3DTileset/index.html
+++ b/Cesium3DTile/NewYork3DTileset/index.html
@@ -8,10 +8,8 @@
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>New York</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
-    <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-    <script src="https://cesiumjs.org/releases/1.77/Build/Cesium/Cesium.js"></script>
-    <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/CesiumUnminified/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.93/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
 <div id="cesiumContainer" class="fullSize"></div>
@@ -19,7 +17,7 @@
 </div>
 
 <script>
-    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJlYTIzNzQ4NS1iN2ZmLTQ3ZWQtYjU0OS1mZWI4Nzk0MjcwNDAiLCJpZCI6OTc4Niwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTU1NDkxODE3NH0.UUQf2vuc3PN3VPNSUYt5uAbrSv5irvkIe-A57Ocp6ow";
+    Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIxMDVmZDZlOS1jNzYxLTQ3MWYtYmNlNi0xMzA4NjA1OTc1NDgiLCJpZCI6OTc4NiwiaWF0IjoxNjE3MTU2MTQ2fQ.vtM1I7acSXgL6riYVHUMz_lWeaCESiUOeYXVM2lft50";
 
     const viewer = new Cesium.Viewer('cesiumContainer', {
 
@@ -48,7 +46,7 @@
 
         tileset.style = transparentStyle;
 
-    }).otherwise(function(err) {
+    }).catch(function(err) {
         console.error(err.message);
     });
 </script>
