--- a/Cesium3DTile/WGS84/WGS84.html
+++ b/Cesium3DTile/WGS84/WGS84.html
@@ -9,7 +9,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>WGS84</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.87/Build/CesiumUnminified/Cesium.js"></script>
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.101/Build/CesiumUnminified/Cesium.js"></script>
     <link href="https://cesium.com/downloads/cesiumjs/releases/1.87/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 </head>
 <body>
@@ -49,7 +49,7 @@
 
         viewer.zoomTo(tileset);
 
-    }).otherwise(function(err) {
+    }).catch(function(err) {
         console.error(err.message);
     });
 </script>
