--- a/Advanced/TurfPointGrid/index.html
+++ b/Advanced/TurfPointGrid/index.html
@@ -8,10 +8,16 @@
     <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>Turf</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.76/Build/Cesium/Widgets/widgets.css">
-    <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-    <script src="https://cesiumjs.org/releases/1.76/Build/Cesium/Cesium.js"></script>
+    <link rel="stylesheet" href="https://cesium.com/downloads/cesiumjs/releases/1.76/Build/Cesium/Widgets/widgets.css">
+
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.76/Build/CesiumUnminified/Cesium.js"></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+
+    <link rel="stylesheet" href="./bucket.css">
+
+    <script>
+        Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIxMDVmZDZlOS1jNzYxLTQ3MWYtYmNlNi0xMzA4NjA1OTc1NDgiLCJpZCI6OTc4NiwiaWF0IjoxNjE3MTU2MTQ2fQ.vtM1I7acSXgL6riYVHUMz_lWeaCESiUOeYXVM2lft50";
+    </script>
 </head>
 <body>
     <div id="cesiumContainer" class="fullSize"></div>
