--- a/Advanced/Satellite/Satellite.html
+++ b/Advanced/Satellite/Satellite.html
@@ -1,130 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Use correct character set. -->
-    <meta charset="utf-8"/>
-    <!-- Tell IE to use the latest, best version. -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
-    <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
-    />
-    <title>Satellite</title>
-    <script src="https://cesium.com/downloads/cesiumjs/releases/1.95/Build/CesiumUnminified/Cesium.js"></script>
-    <link
-            href="https://cesium.com/downloads/cesiumjs/releases/1.95/Build/Cesium/Widgets/widgets.css"
+    <head>
+        <title>Satellite</title>
+        <script src="https://cesium.com/downloads/cesiumjs/releases/1.117/Build/CesiumUnminified/Cesium.js"></script>
+        <link
+            href="https://cesium.com/downloads/cesiumjs/releases/1.117/Build/Cesium/Widgets/widgets.css"
             rel="stylesheet"
-    />
-    <script src="https://sandcastle.cesium.com/Sandcastle-header.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/satellite.js/4.1.4/satellite.min.js"></script>
-</head>
-<body>
-<div id="cesiumContainer" class="fullSize"></div>
-<div id="toolbar"></div>
+        />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/satellite.js/4.1.4/satellite.min.js"></script>
+    </head>
+    <body>
+        <div id="cesiumContainer" class="fullSize"></div>
 
-<script>
-    const {
-        BoundingSphere,
-        Cartesian3,
-        Color,
-        defined,
-        JulianDate,
-        Matrix3,
-        Matrix4,
-        Transforms,
-        Viewer
-    } = window.Cesium;
+        <script>
+            const { BoundingSphere, Cartesian3, Color, defined, JulianDate, Matrix3, Matrix4, Transforms, Viewer } =
+                window.Cesium;
 
-    const CesiumMath = Cesium.Math;
+            const CesiumMath = Cesium.Math;
 
-    const viewer = new Viewer("cesiumContainer", {
-        shouldAnimate: true
+            const viewer = new Viewer("cesiumContainer", {
+                shouldAnimate: true
+            });
 
-    });
+            const object = viewer.entities.add({
+                position: Cartesian3.fromDegrees(0, 0),
+                model: {
+                    uri: "./weixin.gltf",
+                    minimumPixelSize: 128,
+                    maximumScale: 20000
+                }
+            });
 
-    const object = viewer.entities.add({
-        position: Cartesian3.fromDegrees(0, 0,),
-        model: {
-            uri: "./weixin.gltf",
-            minimumPixelSize: 128,
-            maximumScale: 20000,
-        }
-    });
+            const tleLine1 = "1 25544U 98067A   19156.50900463  .00003075  00000-0  59442-4 0  9992";
+            const tleLine2 = "2 25544  51.6433  59.2583 0008217  16.4489 347.6017 15.51174618173442";
 
-    const tleLine1 = '1 25544U 98067A   19156.50900463  .00003075  00000-0  59442-4 0  9992';
-    const tleLine2 = '2 25544  51.6433  59.2583 0008217  16.4489 347.6017 15.51174618173442';
+            // Initialize a satellite record
+            const satrec = satellite.twoline2satrec(tleLine1, tleLine2);
 
-    // Initialize a satellite record
-    const satrec = satellite.twoline2satrec(tleLine1, tleLine2);
+            viewer.clock.multiplier = 1000; // speed of the simulation
 
-    viewer.clock.multiplier = 1000; // speed of the simulation
+            const earthRotation = false;
 
-    const earthRotation = false;
+            // https://stackoverflow.com/questions/64485298/is-there-a-way-to-configure-cesium-entities-to-be-displayed-as-icrf
 
-    // https://stackoverflow.com/questions/64485298/is-there-a-way-to-configure-cesium-entities-to-be-displayed-as-icrf
+            const viewInInertial = true;
 
-    const viewInInertial = true;
+            function updateCamera(time) {
+                const camera = viewer.scene.camera;
 
-    function updateCamera(time) {
-        const camera = viewer.scene.camera;
+                const icrfToFixed = Transforms.computeIcrfToFixedMatrix(time);
 
-        const icrfToFixed = Transforms.computeIcrfToFixedMatrix(time);
+                if (icrfToFixed) {
+                    const offset = Cartesian3.clone(camera.position);
+                    const transform = Matrix4.fromRotationTranslation(icrfToFixed);
 
-        if (icrfToFixed) {
-            const offset = Cartesian3.clone(camera.position);
-            const transform = Matrix4.fromRotationTranslation(icrfToFixed);
-
-            if (earthRotation) {
-                camera.lookAtTransform(transform, offset);
-            }
-        }
-    }
-
-    function onPreRender(scene, time) {
-        updateCamera(time);
-        updatePosition(time);
-    }
-
-    function updatePosition(julianDate) {
-        const date = JulianDate.toDate(julianDate);
-
-        const positionAndVelocity = satellite.propagate(satrec, date);
-
-        const gmst = satellite.gstime(date);
-
-        const positionEci = positionAndVelocity.position;
-        const positionGd = satellite.eciToGeodetic(positionEci, gmst);
-
-        const longitude = positionGd.longitude;
-        const latitude = positionGd.latitude;
-        const height = positionGd.height;
-
-        const positionInFixed = Cartesian3.fromDegrees(CesiumMath.toDegrees(longitude), CesiumMath.toDegrees(latitude), height);
-
-        if (viewInInertial) {
-            const fixedToIcrf = Transforms.computeFixedToIcrfMatrix(julianDate);
-
-            let positionInInertial = new Cartesian3();
-
-            if (defined(fixedToIcrf)) {
-                positionInInertial = Matrix3.multiplyByVector(fixedToIcrf, positionInFixed, positionInInertial);
+                    if (earthRotation) {
+                        camera.lookAtTransform(transform, offset);
+                    }
+                }
             }
 
-            object.position.setValue(positionInInertial);
-        } else {
-            object.position.setValue(positionInFixed);
-        }
-    }
+            function onPreRender(scene, time) {
+                updateCamera(time);
+                updatePosition(time);
+            }
 
-    viewer.scene.preRender.addEventListener(onPreRender);  // enable Earth rotation
+            function updatePosition(julianDate) {
+                const date = JulianDate.toDate(julianDate);
 
-    /*
+                const positionAndVelocity = satellite.propagate(satrec, date);
+
+                const gmst = satellite.gstime(date);
+
+                const positionEci = positionAndVelocity.position;
+                const positionGd = satellite.eciToGeodetic(positionEci, gmst);
+
+                const longitude = positionGd.longitude;
+                const latitude = positionGd.latitude;
+                const height = positionGd.height;
+
+                const positionInFixed = Cartesian3.fromDegrees(
+                    CesiumMath.toDegrees(longitude),
+                    CesiumMath.toDegrees(latitude),
+                    height
+                );
+
+                if (viewInInertial) {
+                    const fixedToIcrf = Transforms.computeFixedToIcrfMatrix(julianDate);
+
+                    let positionInInertial = new Cartesian3();
+
+                    if (defined(fixedToIcrf)) {
+                        positionInInertial = Matrix3.multiplyByVector(fixedToIcrf, positionInFixed, positionInInertial);
+                    }
+
+                    object.position.setValue(positionInInertial);
+                } else {
+                    object.position.setValue(positionInFixed);
+                }
+            }
+
+            viewer.scene.preRender.addEventListener(onPreRender); // enable Earth rotation
+
+            /*
     if(!earthRotation){
         viewer.trackedEntity = object;
     }
     */
-
-</script>
-</body>
+        </script>
+    </body>
 </html>
