--- a/0-HelloWorld/index.html
+++ b/0-HelloWorld/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Use correct character set. -->
-    <meta charset="utf-8">
-    <!-- Tell IE to use the latest, best version. -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>CesiumJs Hello World</title>
-    <link rel="stylesheet" href="https://cesiumjs.org/releases/1.80/Build/Cesium/Widgets/widgets.css">
-    <link rel="stylesheet" href="https://cesiumjs.org/Cesium/Build/Apps/Sandcastle/templates/bucket.css">
-    <script src="https://cesiumjs.org/releases/1.80/Build/Cesium/Cesium.js"></script>
-    <script src = "https://sandcastle.cesium.com/Sandcastle-header.js"></script>
-</head>
-<body>
-<div id="cesiumContainer" class="fullSize"></div>
-<div id="toolbar">
-</div>
+    <head>
+        <!-- Use correct character set. -->
+        <meta charset="utf-8" />
+        <!-- Tell IE to use the latest, best version. -->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
+        />
+        <title>CesiumJs Hello World</title>
+        <link
+            href="https://cesium.com/downloads/cesiumjs/releases/1.123/Build/Cesium/Widgets/widgets.css"
+            rel="stylesheet"
+        />
+        <script src="https://cesium.com/downloads/cesiumjs/releases/1.123/Build/CesiumUnminified/Cesium.js"></script>
+        <script src="https://sandcastle.cesium.com/Sandcastle-header.js"></script>
+    </head>
+    <body>
+        <div id="cesiumContainer" class="fullSize"></div>
+        <div id="toolbar"></div>
 
-<script>
-    //Cesium.Ion.defaultAccessToken = "your access token";
+        <script>
+            //Cesium.Ion.defaultAccessToken = "your access token";
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {});
-</script>
-</body>
+            const viewer = new Cesium.Viewer("cesiumContainer", {});
+        </script>
+    </body>
 </html>
